Small HTML change

--- a/processing/testExplorer.html
+++ b/processing/testExplorer.html
@@ -74,7 +74,7 @@
             xml.src = i + '/' + i + 'xml.txt';
 
             txt = document.getElementById("text");
-            txt.src = i + '/' + i + '.txt';
+            txt.src = i + '/' + i + '_simple.txt';
         }
 
     </script>
