--- a/tests/2_threads_3_instructions/alloy_output_processed/testExplorer.html
+++ b/tests/2_threads_3_instructions/alloy_output_processed/testExplorer.html
@@ -76,7 +76,7 @@
             image.src = i + '/' + i + '.png';
 
             xml = document.getElementById("xml");
-            xml.src = i + '/' + i + 'xml.txt';
+            xml.src = i + '/' + i + '.amber';
 
             txt = document.getElementById("text");
             txt.src = i + '/' + i + '_simple.txt';
