--- a/processing/testExplorer.html
+++ b/processing/testExplorer.html
@@ -82,7 +82,7 @@
             txt.src = i + '/' + i + '_simple.txt';
 
             txt = document.getElementById("labels");
-            txt.src = i + '/checker/labels_'+i+'.txt';
+            txt.src = i + '/labels_'+i+'.txt';
         }
 
     </script>
