--- a/tests/2_threads_2_instructions/alloy_output_processed/testExplorer.html
+++ b/tests/2_threads_2_instructions/alloy_output_processed/testExplorer.html
@@ -82,7 +82,7 @@
             txt.src = i + '/' + i + '_simple.txt';
 
             txt = document.getElementById("labels");
-            txt.src = i + '/labels_'+i+'.txt';
+            txt.src = i + '/label_'+i+'.txt';
         }
 
     </script>
