--- a/tests/2_threads_2_instructions/alloy_output_processed/testExplorer.html
+++ b/tests/2_threads_2_instructions/alloy_output_processed/testExplorer.html
@@ -13,13 +13,13 @@
         }
 
         .left {
-            width: 12%;
-            left: 0;
+            width: 16%;
+            left: 5px;
         }
 
         .right {
             right: 2%;
-            width: 85%;
+            width: 80%;
         }
 
         #png-viewer{
@@ -93,6 +93,10 @@
         <ul id = "directory">
             
         </ul>
+        <h3>Acknowledgements</h3>
+        <p id="ack">
+            Amber files by Hari Raval. Alloy description by Tyler Sorensen. Test labeling by Hugues Evrard and Lucas Salvador.
+        </p>
     </div>
 
     <div class="split right">
@@ -101,7 +105,7 @@
         </div>
 
         <div id="words">
-	    <h3 id="number">Test Number</h3>
+        <h3 id="number">Test Number</h3>
             <iframe id="text" src=""></iframe>
             <iframe id="labels" src=""></iframe>
             <iframe id="xml" src=""></iframe>
