I accidentally removed a line

--- a/tests/testExplorer.html
+++ b/tests/testExplorer.html
@@ -62,6 +62,8 @@
                 var test = urlParams.get('test');
                 var threads = urlParams.get('threads');
                 var instructions = urlParams.get('instructions');
+
+                openTestCase(test,threads,instructions);
             }
 
             var str = document.cookie;
